@@ -1,3 +1,8 @@
+2009-04-17 Sean Swehla <smswehla@linux.vnet.ibm.com>
+
+	* providerMgr.c
+	[ 2538227 ] Daemon clients are not unloading providers (localclient)
+
 2009-04-14 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
 
 	* Makefile.am, configure.ac, wbemcatX, man/wbemcatX.1.pre.in:
